--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,18 +1,18 @@
-@import "./mixins";
+@use './libs/mixins';
 
 // index
 .index {
-  --size-intro-margin-top: 32px;
+  --size-intro-margin-top: 42px;
   --size-works-gap: 16px;
   margin: var(--size-intro-margin-top) 0 0;
-  @include responsive(tablet) {
+  @include mixins.responsive(tablet) {
     --size-intro-margin-top: 36px;
   }
-  @include responsive(desktop) {
-    --size-intro-margin-top: 62px;
+  @include mixins.responsive(desktop) {
+    --size-intro-margin-top: 54px;
     --size-works-gap: 24px;
   }
-  @include responsive(max) {
+  @include mixins.responsive(max) {
     --size-works-gap: 30px;
   }
 }
@@ -26,18 +26,18 @@
     margin: 0;
     text-align: center;
     font-family: var(--font-eng);
-    font-size: 24px;
+    font-size: 32px;
     line-height: 1.15;
     letter-spacing: -.5px;
     font-weight: 600;
     color: var(--color-index-header-title);
   }
-  @include responsive(tablet) {
+  @include mixins.responsive(tablet) {
     &__title {
       font-size: 42px;
     }
   }
-  @include dark-mode() {
+  @include mixins.dark-mode() {
     --color-index-header-title: #fff;
   }
 }
@@ -55,13 +55,13 @@
     padding: 0 var(--size-side-padding);
     border: none;
     background: none;
-    background: #eee;
+    background: rgb(230 230 230);
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
     outline: none;
     color: var(--color-text);
     &:active {
-      opacity: .5;
+      opacity: .75;
     }
     span {
       display: flex;
@@ -88,7 +88,7 @@
   }
   > nav {
     display: none;
-    background: #f4f4f4;
+    background: rgb(240 240 240);
     padding: 15px 0;
     ul {
       margin: 0;
@@ -134,7 +134,7 @@
   }
   &--on {
     > button {
-      background: #ddd;
+      background: rgb(210 210 210);
       svg {
         transform: scaleY(-1);
       }
@@ -143,11 +143,11 @@
       display: block;
     }
   }
-  @include responsive(mobile-large) {
+  @include mixins.responsive(mobile-large) {
     --count-categories-column: 3;
     margin-bottom: -8px;
   }
-  @include responsive(tablet) {
+  @include mixins.responsive(tablet) {
     margin: 4px 0 10px;
     > button {
       display: none;
@@ -188,7 +188,7 @@
       }
     }
   }
-  @include dark-mode() {
+  @include mixins.dark-mode() {
     > button {
       background: #111;
       &:active {
@@ -203,7 +203,7 @@
         background: #1a1a1a;
       }
     }
-    @include responsive(tablet) {
+    @include mixins.responsive(tablet) {
       > nav {
         background: none;
       }
@@ -230,15 +230,15 @@
   &--body {
     --size-works-margin-top: 32px;
   }
-  @include responsive(mobile-large) {
+  @include mixins.responsive(mobile-large) {
     --count-works-column: 2;
     --side-works-padding: 0 var(--size-side-padding);
     --size-works-margin-top: 32px;
   }
-  @include responsive(tablet) {
+  @include mixins.responsive(tablet) {
     --size-works-margin-top: 32px;
   }
-  @include responsive(desktop) {
+  @include mixins.responsive(desktop) {
     --count-works-column: 4;
     &--head {
       --size-works-margin-top: 30px;
@@ -266,9 +266,10 @@
     position: relative;
     margin: 0;
     overflow: hidden;
-    background: #f1f1f1;
+    background: rgb(240 240 240);
     height: var(--size-image-height);
     max-height: var(--size-image-max-height);
+    box-sizing: border-box;
     img {
       position: absolute;
       left: 50%;
@@ -297,6 +298,7 @@
       height: 48px;
       color: var(--color-text-blur);
       opacity: .75;
+      stroke-width: .75;
     }
     &:active {
       img {
@@ -313,11 +315,11 @@
       color: var(--color-text);
       font-weight: 600;
       line-height: 1.25;
-      @include text-single-line();
+      @include mixins.text-single-line();
     }
     span {
       display: block;
-      margin: 2px 0 0;
+      margin: 0 0 0;
       font-family: var(--font-eng);
       font-size: .625rem;
       color: var(--color-text-blur);
@@ -331,14 +333,17 @@
       }
     }
   }
-  @include responsive(mobile-large) {
+  @include mixins.responsive(mobile-large) {
     --size-image-height: 28vw;
+    &__image {
+      border-radius: 2px;
+    }
     &__caption {
-      padding: 10px 0 0;
+      padding: 8px 0 0;
       text-align: left;
     }
   }
-  @include responsive(tablet) {
+  @include mixins.responsive(tablet) {
     &__wrap {
       &:hover {
         #{$self}__image {
@@ -362,15 +367,15 @@
       }
     }
   }
-  @include responsive(desktop) {
+  @include mixins.responsive(desktop) {
     --size-image-height: 15vw;
     --size-image-max-height: 200px;
   }
-  @include responsive(max) {
+  @include mixins.responsive(max) {
     --size-image-height: 20vw;
     --size-image-max-height: 240px;
   }
-  @include dark-mode() {
+  @include mixins.dark-mode() {
     &__image {
       background: #111;
     }
@@ -401,32 +406,35 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    @include horizontal-scroll-wrap(24px, 16px);
+    @include mixins.horizontal-scroll-wrap(24px, 16px);
   }
   &__item {
     --size-image-height: 55vw;
     --size-image-max-height: 240px;
-    @include horizontal-scroll-item(16px, 24px);
+    @include mixins.horizontal-scroll-item(16px, 24px);
     width: 80vw;
   }
-  @include responsive(mobile-large) {
+  .index-work__image {
+    background: rgb(255 255 255);
+  }
+  @include mixins.responsive(mobile-large) {
     &__item {
       --size-image-height: 28vw;
       width: 40vw;
     }
   }
-  @include responsive(tablet) {
+  @include mixins.responsive(tablet) {
     margin-top: 24px;
     padding-top: 36px;
     &__list {
-      @include horizontal-scroll-wrap(54px, 16px);
+      @include mixins.horizontal-scroll-wrap(54px, 16px);
     }
     &__item {
-      @include horizontal-scroll-item(24px, 54px);
+      @include mixins.horizontal-scroll-item(24px, 54px);
       --size-image-max-height: 240px;
     }
   }
-  @include responsive(desktop) {
+  @include mixins.responsive(desktop) {
     padding: 48px var(--size-side-padding) 36px;
     &__list {
       max-width: 1440px;
@@ -453,15 +461,18 @@
       }
     }
   }
-  @include responsive(max) {
+  @include mixins.responsive(max) {
     &__item {
       --size-image-height: 20vw;
       --size-image-max-height: 240px;
     }
   }
-  @include dark-mode() {
+  @include mixins.dark-mode() {
     &:before {
       background: rgba(0,0,0,.25);
+    }
+    .index-work__image {
+      background: rgb(48 48 48);
     }
   }
 }
@@ -529,7 +540,7 @@
       display: none;
     }
   }
-  @include responsive(tablet) {
+  @include mixins.responsive(tablet) {
     --size-paginate-item: 40px;
     margin-top: 32px;
     .paginate {
@@ -541,7 +552,7 @@
       }
     }
   }
-  @include dark-mode() {
+  @include mixins.dark-mode() {
     --color-paginate-active-bg: #1a1a1a;
   }
 }
@@ -554,17 +565,17 @@
   &__index {
     --size-intro-margin-top: 0px;
   }
-  @include responsive(mobile-large) {
+  @include mixins.responsive(mobile-large) {
     &__index {
       --size-intro-margin-top: var(--size-side-padding);
     }
   }
-  @include responsive(tablet) {
+  @include mixins.responsive(tablet) {
     &__index {
       --size-intro-margin-top: 64px;
     }
   }
-  @include responsive(max) {
+  @include mixins.responsive(max) {
     &__index {
       --size-intro-margin-top: 72px;
     }
