--- a/assets/scss/libs/mixins.scss
+++ b/assets/scss/libs/mixins.scss
@@ -39,16 +39,17 @@
   background: $matt-color;
   @if $direction == 'horizontal'
   {
-    background: linear-gradient(to right, $start, $end);
+    background: linear-gradient(to right, #{$start}, #{$end});
   }
   @else
   {
-    background: linear-gradient(to bottom, $start, $end);
+    background: linear-gradient(to bottom, #{$start}, #{$end});
   }
 }
 
 // dark mode
-@mixin dark-mode() {
+@mixin dark-mode()
+{
   @media (prefers-color-scheme: dark) { @content; }
 }
 
@@ -75,7 +76,6 @@
   {
     $padding-side-outer: $padding-side;
   }
-
   position: relative;
   display: inline-block;
   margin-left: $padding-side;
@@ -92,4 +92,13 @@
   &:last-child {
     margin-right: $padding-side-outer;
   }
+}
+
+// button touch options
+@mixin button-setup($opacity: false)
+{
+  outline: none;
+  user-select: none;
+  cursor: pointer;
+  -webkit-tap-highlight-color: rgb(0 0 0 / 0%);
 }
