--- a/assets/scss/detail.scss
+++ b/assets/scss/detail.scss
@@ -187,13 +187,16 @@
 }
 
 // content body
-.redgoose-body img {
-
-}
 .redgoose-body {
   h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-title);
     font-weight: normal;
+    &:target {
+      scroll-margin-top: calc(var(--size-header-height) + 30px);
+    }
+    .anchor {
+      display: none;
+    }
   }
   img {
     display: block;
@@ -319,6 +322,34 @@
       }
       &:last-child {
         margin-bottom: 0;
+      }
+    }
+  }
+  @include mixins.responsive(tablet) {
+    h1, h2, h3, h4, h5, h6 {
+      position: relative;
+      .anchor {
+        display: block;
+        position: absolute;
+        left: -42px;
+        top: 50%;
+        opacity: 0;
+        transition: opacity 100ms ease-out;
+        transform: translateY(-50%);
+        padding: 10px;
+        box-sizing: border-box;
+        svg {
+          display: block;
+          width: 20px;
+          aspect-ratio: 1 / 1;
+          color: hsl(var(--color-text-blur-hsl));
+          stroke-width: 1.75;
+        }
+      }
+      @include mixins.hover() {
+        .anchor {
+          opacity: 1;
+        }
       }
     }
   }
