목록부분 로딩부분 연구중..

--- a/src/pages/nest/index.scss
+++ b/src/pages/nest/index.scss
@@ -4,6 +4,7 @@
   margin: 42px 0 0;
   &__header {
     padding: 0 24px;
+    user-select: none;
     h1 {
       margin: 0;
       text-align: center;
