--- a/src/pages/nest/index.scss
+++ b/src/pages/nest/index.scss
@@ -4,7 +4,6 @@
   margin: 42px 0 0;
   &__header {
     padding: 0 24px;
-    user-select: none;
     h1 {
       margin: 0;
       text-align: center;
@@ -14,6 +13,9 @@
       letter-spacing: -.5px;
       font-weight: 600;
       color: var(--color-edge);
+      span {
+        user-select: none;
+      }
     }
   }
   &__categories {
@@ -33,6 +35,7 @@
   }
   @include mixins.responsive(tablet) {
     margin-top: 64px;
+    --size-body-top: 32px;
     &__header {
       padding: 0 52px;
       h1 {
