--- a/src/components/pages/index/item.scss
+++ b/src/components/pages/index/item.scss
@@ -35,17 +35,15 @@
         transform: scale(1);
       }
     }
-    svg {
+    i {
       display: block;
       position: absolute;
       left: 50%;
       top: 50%;
       transform: translate(-50%,-50%);
-      width: 48px;
-      height: 48px;
-      color: var(--color-text-blur);
-      opacity: .75;
-      stroke-width: .75;
+      --icon-size: 48px;
+      --icon-color: var(--color-text-blur);
+      --icon-stroke: .5;
     }
     &:active {
       img {
@@ -66,7 +64,7 @@
     }
     span {
       display: block;
-      margin: 0;
+      margin: 2px 0 0;
       font-family: var(--font-eng);
       font-size: 10px;
       color: var(--color-text-blur);
@@ -104,6 +102,10 @@
         transition: transform 300ms ease-out;
         transform-origin: 50% 50%;
         backface-visibility: hidden;
+      }
+      i {
+        --icon-size: 36px;
+        --icon-stroke: .75;
       }
     }
   }
