--- a/src/pages/article.scss
+++ b/src/pages/article.scss
@@ -35,28 +35,14 @@
   }
   &__body {
     margin: 20px 0 0;
+    min-height: 15vh;
   }
   &__like {
     margin: 40px 0 0;
     text-align: center;
   }
-  &__error {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 50px 0;
-    img {
-      display: block;
-      width: 232px;
-      max-width: 100%;
-    }
-    p {
-      margin: 30px 0 0;
-      text-align: center;
-      font-family: var(--font-eng);
-      font-size: 1rem;
-      font-weight: 400;
-    }
+  &__empty {
+    height: calc(75vh - var(--size-header-height));
   }
   @include mixins.responsive(tablet) {
     --article-side-padding: 62px;
