--- a/src/components/layout/header/index.scss
+++ b/src/components/layout/header/index.scss
@@ -8,7 +8,7 @@
   top: 0;
   height: var(--size-header-height);
   box-sizing: border-box;
-  background: var(--header-color-bg, rgb(255 255 255 / 90%));
+  background: var(--header-color-bg, hsl(0 0% 100% / 75%));
   box-shadow: var(--header-shadow, (0 0 0 .5px rgb(0 0 0 / 10%), 0 1px 8px rgb(0 0 0 / 10%)));
   @supports (backdrop-filter: blur(24px)) {
     backdrop-filter: blur(24px);
@@ -116,7 +116,7 @@
   }
   @include mixins.dark-mode() {
     --header-color-button-fill: rgb(255 255 255);
-    --header-color-bg: rgb(0 0 0 / 60%);
+    --header-color-bg: hsl(0 0% 0% / 60%);
   }
 }
 
