--- a/src/components/paginate/items.scss
+++ b/src/components/paginate/items.scss
@@ -41,8 +41,8 @@
       transition: transform .2s ease-out;
     }
     @include mixins.hover() {
-      --icon-color: var(--color-edge);
-      color: var(--color-edge);
+      --icon-color: var(--color-bg);
+      color: var(--color-bg);
       &:before {
         transform: translateY(0);
       }
