--- a/src/components/layout/header/index.scss
+++ b/src/components/layout/header/index.scss
@@ -121,8 +121,8 @@
 }
 
 .header-navigation {
-  --color-bg-gradient-start: rgb(204 91 64 / 95%);
-  --color-bg-gradient-end: rgb(123 42 121 / 95%);
+  --color-bg-gradient-start: hsl(12 58% 53% / 95%);
+  --color-bg-gradient-end: hsl(301 49% 32% / 95%);
   display: none;
   position: absolute;
   left: 0;
@@ -133,6 +133,9 @@
   box-shadow: inset 0 2px 8px rgb(0 0 0 / 20%);
   user-select: none;
   @include mixins.color-linear-gradient(var(--color-key), var(--color-bg-gradient-start), var(--color-bg-gradient-end));
+  @supports (backdrop-filter: blur(24px)) {
+    backdrop-filter: blur(24px);
+  }
   a {
     display: block;
     text-decoration: none;
@@ -150,9 +153,12 @@
     box-sizing: border-box;
     > li {
       > a {
+        display: inline-block;
+        margin: 0 -16px;
+        padding: 0 16px;
         font-size: 18px;
         font-weight: 600;
-        color: rgb(255 255 255);
+        color: hsl(0 0% 100%);
         &:active {
           opacity: .5;
         }
@@ -205,6 +211,7 @@
           display: grid;
           align-content: center;
           height: 100%;
+          margin: 0;
           padding: 0 24px;
           font-family: var(--font-eng);
           font-weight: 600;
@@ -269,8 +276,8 @@
     }
   }
   @include mixins.dark-mode() {
-    --color-bg-gradient-start: rgb(28 205 92 / 95%);
-    --color-bg-gradient-end: rgba(8 188 140 / 95%);
+    --color-bg-gradient-start: hsl(142 76% 46% / 95%);
+    --color-bg-gradient-end: hsl(164 92% 38% / 95%);
     @include mixins.responsive(tablet) {
       ul {
         > li {
@@ -282,7 +289,7 @@
           &:focus-within,
           &:hover {
             > a {
-              background: rgb(255 255 255 / 7%);
+              background-color: hsl(0 0% 100% / 7%);
             }
           }
         }
