--- a/src/assets/scss/mixins.scss
+++ b/src/assets/scss/mixins.scss
@@ -112,3 +112,13 @@
     }
   }
 }
+
+// background blur
+@mixin background-blur($size: 8px)
+{
+  @supports (backdrop-filter: blur(#{$size})) or (-webkit-backdrop-filter: blur(#{$size})) {
+    backdrop-filter: blur(#{$size});
+    -webkit-backdrop-filter: blur(#{$size});
+    @content;
+  }
+}
