--- a/src/components/pages/article/lightbox.scss
+++ b/src/components/pages/article/lightbox.scss
@@ -1,5 +1,61 @@
 @use '../../../assets/scss/mixins';
 
 .lightbox {
-  //
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 99999;
+  background: hsl(0 0% 100% / 92%);
+  @include mixins.background-blur(32px);
+  &__image {
+    display: grid;
+    place-content: center;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    img {
+      display: block;
+      max-width: 75vw;
+      max-height: 75vh;
+      object-fit: contain;
+      border-radius: 2px;
+      filter:
+        drop-shadow(2.7px 1.4px 1.9px hsl(0 0% 0% / 4%))
+        drop-shadow(6.9px 3.5px 5.8px hsl(0 0% 0% / 6%))
+        drop-shadow(14.2px 7.1px 13.2px hsl(0 0% 0% / 8%))
+        drop-shadow(29.2px 14.6px 29.1px hsl(0 0% 0% / 10%))
+        drop-shadow(36px 24px 30px hsl(0 0% 0% / 16%));
+    }
+  }
+  &__close {
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    border: none;
+    font-size: 0;
+    background: none;
+    -webkit-tap-highlight-color: transparent;
+    cursor: zoom-out;
+    box-sizing: border-box;
+  }
+  @include mixins.dark-mode() {
+    background: hsl(var(--color-bg-hsl) / 100%);
+    &__image {
+      img {
+        filter:
+          drop-shadow(2.7px 1.4px 1.9px hsl(0 0% 0% / 4%))
+          drop-shadow(6.9px 3.5px 5.8px hsl(0 0% 0% / 6%))
+          drop-shadow(14.2px 7.1px 13.2px hsl(0 0% 0% / 8%))
+          drop-shadow(29.2px 14.6px 29.1px hsl(0 0% 0% / 10%))
+          drop-shadow(36px 24px 30px hsl(0 0% 0% / 24%));
+      }
+    }
+  }
 }
