서치엔진 페이지 작업 마무리

--- a/server/search-engine/template/components/paginate.pug
+++ b/server/search-engine/template/components/paginate.pug
@@ -4,6 +4,6 @@ nav
     each o in paginate
       li
         if !o.url
-          strong #{o.key}
+          strong #{o.key}page
         else
-          a(href=o.url title=`go to ${o.key} page`) #{o.key}
+          a(href=o.url title=`go to ${o.key} page`) #{o.key}page
