--- a/server/search-engine/template/page/about.pug
+++ b/server/search-engine/template/page/about.pug
@@ -1,2 +1,22 @@
-h1 about page
-p description
+doctype html
+html(lang="ko")
+  head
+    include ../layout/head
+  body
+    main
+      include ../layout/header
+      article
+        header
+          p Introduce
+          h1 #{content.title}
+          figure
+            img(src=content.coverImage.src[0] alt=content.coverImage.alt)
+          p !{content.description}
+        each o in content.information
+          section
+            h1 #{o.title}
+            dl
+              each oo in o.items
+                dt #{oo.label}
+                dd !{oo.body}
+      include ../layout/footer
