--- a/src/components/pages/article/content-body.scss
+++ b/src/components/pages/article/content-body.scss
@@ -23,6 +23,7 @@
     transform-origin: 50% 50%;
     transition: opacity .2s ease-out;
     cursor: pointer;
+    @include mixins.button-setup();
     @include mixins.responsive(desktop) {
       max-width: 1000px;
     }
