--- a/src/components/pages/article/lightbox.scss
+++ b/src/components/pages/article/lightbox.scss
@@ -8,7 +8,7 @@
   bottom: 0;
   z-index: 99999;
   background: hsl(var(--color-bg-hsl) / 65%);
-  @include mixins.background-blur(32px);
+  @include mixins.background-blur(36px);
   &__image {
     display: grid;
     place-content: center;
@@ -36,7 +36,24 @@
     font-size: 0;
     background: none;
     -webkit-tap-highlight-color: transparent;
-    cursor: zoom-out;
     box-sizing: border-box;
+    @include mixins.button-setup();
+    cursor: zoom-out;
+    :global(svg) {
+      display: none;
+    }
+  }
+  @include mixins.responsive(tablet) {
+    &__close {
+      :global(svg) {
+        display: block;
+        position: absolute;
+        right: 16px;
+        top: 16px;
+        --icon-size: 48px;
+        --icon-stroke: 1;
+        --icon-color: hsl(var(--color-text-hsl) / 50%);
+      }
+    }
   }
 }
