포커스 스타일 부분 작업

--- a/src/components/pages/index/item.scss
+++ b/src/components/pages/index/item.scss
@@ -4,10 +4,27 @@
   box-sizing: border-box;
   min-width: 0;
   &__wrap {
+    position: relative;
     display: block;
     text-decoration: none;
     padding: 0 0 8px;
     -webkit-tap-highlight-color: transparent;
+    &:focus-visible {
+      outline: none;
+      &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        z-index: 2;
+        pointer-events: none;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        outline: 2px solid var(--color-key);
+        outline-offset: -2px;
+      }
+    }
   }
   &__image {
     position: relative;
@@ -91,6 +108,11 @@
               transform: scale(1.1);
             }
           }
+        }
+      }
+      &:focus-visible {
+        &:after {
+          outline-offset: 4px;
         }
       }
     }
