--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -49,7 +49,7 @@ $dir: '../fonts';
   font-family: 'AritaBuri';
   font-style: normal;
   font-weight: 300;
-  src: url('./Arita-buri/Arita-buri-300.woff2') format('woff');
+  src: url('#{$dir}/Arita-buri/Arita-buri-300.woff2') format('woff');
 }
 @font-face {
   font-family: 'AritaBuri';
