--- a/src/components/layout/header/index.scss
+++ b/src/components/layout/header/index.scss
@@ -30,6 +30,11 @@
       padding: 5px;
       -webkit-tap-highlight-color: transparent;
       user-select: none;
+      outline: none;
+      &:focus-visible {
+        outline: 2px solid var(--color-key);
+        outline-offset: -2px;
+      }
     }
     img {
       display: block;
@@ -72,6 +77,10 @@
           }
         }
       }
+      &:focus-visible {
+        outline: 2px solid var(--color-key);
+        outline-offset: -2px;
+      }
       &.navigation {
         left: 0;
       }
@@ -103,6 +112,9 @@
       transform: none;
       a {
         padding: 0;
+        &:focus-visible {
+          outline-offset: 0;
+        }
       }
       img {
         width: 86px;
@@ -149,13 +161,18 @@
     > li {
       > a {
         display: inline-block;
-        margin: 0 -16px;
-        padding: 0 16px;
+        margin: 0 -12px;
+        padding: 4px 12px;
         font-size: 18px;
         font-weight: 600;
+        line-height: 1.15;
         color: hsl(0 0% 100%);
         &:active {
           opacity: .5;
+        }
+        &:focus-visible {
+          outline: 2px solid var(--color-bg);
+          outline-offset: -2px;
         }
       }
     }
@@ -169,9 +186,11 @@
     list-style: none;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 0 10px;
     box-sizing: border-box;
     a {
-      padding: 6px 16px 6px 0;
+      margin-left: -12px;
+      padding: 4px 16px 4px 12px;
       box-sizing: border-box;
       color: rgb(255 255 255);
       line-height: 1.42;
@@ -179,6 +198,10 @@
       font-weight: 400;
       &:active {
         opacity: .75;
+      }
+      &:focus-visible {
+        outline: 2px solid var(--color-bg);
+        outline-offset: -2px;
       }
     }
   }
@@ -220,6 +243,10 @@
           &:global(.active) {
             color: var(--color-key);
           }
+          &:focus-visible {
+            outline: 2px solid var(--color-key);
+            outline-offset: -6px;
+          }
         }
         > div {
           position: relative;
@@ -244,14 +271,15 @@
       position: absolute;
       left: 0;
       top: 0;
-      min-width: 120px;
+      min-width: 140px;
       border-bottom-left-radius: 4px;
       border-bottom-right-radius: 4px;
       @include mixins.color-linear-gradient(var(--color-key), var(--color-bg-gradient-start), var(--color-bg-gradient-end));
       > li {
         > a {
-          padding: 4px 25px;
-          color: #fff;
+          margin: 0 4px;
+          padding: 4px 20px;
+          color: hsl(0 0% 100%);
           font-size: .75rem;
           font-weight: 500;
           text-decoration: none;
