--- a/src/components/pages/index/categories.scss
+++ b/src/components/pages/index/categories.scss
@@ -18,6 +18,10 @@
     width: 100%;
     text-align: left;
     border: none;
+    &:focus-visible {
+      outline: 2px solid var(--color-key);
+      outline-offset: -2px;
+    }
     span {
       display: block;
       font-family: var(--font-eng);
@@ -64,6 +68,10 @@
       @include mixins.text-single-line();
       &:active {
         opacity: .5;
+      }
+      &:focus-visible {
+        outline: 2px solid var(--color-key);
+        outline-offset: -2px;
       }
     }
     span {}
@@ -113,6 +121,9 @@
         }
         &:active {
           opacity: 1;
+        }
+        &:focus-visible {
+          outline-offset: 0;
         }
       }
     }
