--- a/src/components/paginate/items.scss
+++ b/src/components/paginate/items.scss
@@ -47,6 +47,10 @@
         transform: translateY(0);
       }
     }
+    &:focus-visible {
+      outline: 2px solid var(--color-key);
+      outline-offset: -2px;
+    }
   }
   strong {
     color: var(--color-key);
