--- a/src/components/pages/index/categories.scss
+++ b/src/components/pages/index/categories.scss
@@ -109,7 +109,7 @@
     &__index {
       flex-wrap: wrap;
       justify-content: center;
-      background-color: transparent;
+      background: none;
       padding: 0;
       a {
         padding: 2px 6px;
