--- a/src/pages/article.scss
+++ b/src/pages/article.scss
@@ -6,6 +6,7 @@
   margin: var(--article-top-margin) 0 0;
   &__header {
     text-align: center;
+    padding: 0 var(--article-side-padding);
     p {
       margin: 0;
       color: #aaa;
