데이터베이스 조정에 대한 대응

--- a/src/pages/nest.scss
+++ b/src/pages/nest.scss
@@ -19,7 +19,8 @@
     }
   }
   &__categories {
-    margin: 20px 0 0;
+    margin: 20px auto 0;
+    max-width: 900px;
   }
   &__body {
     margin: var(--size-body-top, 0) 0 0;
