--- a/server/search-engine/template/layout/head.pug
+++ b/server/search-engine/template/layout/head.pug
@@ -1,6 +1,6 @@
 meta(charset="utf-8")
 title #{title}
-meta(name="viewport" content="width=device-width")
+meta(name="viewport" content="width=device-width,initial-scale=1")
 meta(name="description" content=description)
 meta(name="author" content=name)
 meta(name="keywords" content=keywords)
