--- a/server/search-engine/template/layout/head.pug
+++ b/server/search-engine/template/layout/head.pug
@@ -17,4 +17,5 @@ meta(name="p:domain_verify" content="3e05cc5b868de908660cf4004dbdc8fe")
 link(rel="shortcut icon" href="/favicon.ico")
 link(rel="icon" type="image/x-icon" href="/images/redgoose_256x256.png")
 link(rel="manifest" href="/manifest.json")
-link(rel="stylesheet" href="/assets/style.css")
+style
+  include ../assets/style.css
