--- a/server/search-engine/template/assets/style.css
+++ b/server/search-engine/template/assets/style.css
@@ -1,25 +1,7 @@
-html, body {
-  -webkit-text-size-adjust: 100%;
-}
-body {
-  margin: 24px;
-  word-wrap: break-word;
-  word-break: keep-all;
-}
-figure {
-  margin: 0;
-}
-img {
-  display: block;
-  max-width: 100%;
-}
-ul {
-  padding-left: 24px;
-}
-blockquote {
-  margin: 1rem;
-}
-pre {
-  word-break: break-all;
-  white-space: pre-wrap;
-}
+html, body { -webkit-text-size-adjust: 100%; }
+body { margin: 24px; word-wrap: break-word; word-break: keep-all; }
+figure { margin: 0; }
+img { display: block; max-width: 100%; }
+ul { padding-left: 24px; }
+blockquote { margin: 1rem; }
+pre { word-break: break-all; white-space: pre-wrap; }
