--- a/server/search-engine/template/components/index-item.pug
+++ b/server/search-engine/template/components/index-item.pug
@@ -1,6 +1,6 @@
 if (o.image)
   figure
-    img(src=o.image alt=o.title)
+    img(src=o.image alt=o.title loading="lazy")
 h3
   a(href=`/article/${o.srl}/`) #{o.title}
 dl
