--- a/src/components/layout/header/index.scss
+++ b/src/components/layout/header/index.scss
@@ -230,7 +230,7 @@
           align-content: center;
           height: 100%;
           margin: 0;
-          padding: 0 24px;
+          padding: 0 20px;
           font-family: var(--font-eng);
           font-weight: 600;
           font-size: .875rem;
@@ -294,6 +294,15 @@
           &:global(.active:hover) {
             opacity: 1;
           }
+        }
+      }
+    }
+  }
+  @include mixins.responsive(desktop) {
+    ul {
+      > li {
+        > a {
+          padding: 0 24px;
         }
       }
     }
