--- a/src/components/pages/article/content-body.scss
+++ b/src/components/pages/article/content-body.scss
@@ -130,6 +130,33 @@
       }
     }
   }
+  code {
+    color: var(--color-sub);
+    background: hsl(var(--color-edge-hsl) / 8%);
+    padding: .2em .4em;
+    border-radius: 4px;
+    font-size: 85%;
+    white-space: break-spaces;
+  }
+  pre {
+    position: relative;
+    left: 50%;
+    width: calc(100vw - (var(--article-side-padding) * 1));
+    max-width: 820px;
+    transform: translateX(-50%);
+    transform-origin: 50% 50%;
+    box-sizing: border-box;
+    background: hsl(0 0% 20%);
+    border-radius: 4px;
+    line-height: 1.62;
+    color-scheme: dark;
+    box-shadow:
+      0 4px 36px hsl(0 0% 0% / 25%),
+      0 8px 24px hsl(0 0% 0% / 25%);
+    > code {
+      color: hsl(0 0% 90%);
+    }
+  }
   @include mixins.responsive(tablet) {
     h1, h2, h3, h4, h5, h6 {
       position: relative;
