--- a/src/components/layout/header/index.scss
+++ b/src/components/layout/header/index.scss
@@ -21,7 +21,7 @@
   &__logo {
     position: absolute;
     left: 50%;
-    top: 0;
+    top: 2px;
     margin: 0;
     z-index: 2;
     transform: translateX(-50%);
@@ -38,7 +38,8 @@
     }
     img {
       display: block;
-      width: 76px;
+      width: 68px;
+      height: auto;
     }
   }
   &__buttons {
@@ -107,7 +108,7 @@
     padding: 0 var(--size-side-padding);
     &__logo {
       left: 24px;
-      top: 6px;
+      top: 8px;
       margin: 0;
       transform: none;
       a {
@@ -117,7 +118,7 @@
         }
       }
       img {
-        width: 86px;
+        width: 82px;
       }
     }
     &__buttons {
