--- a/src/components/pages/article/content-body.scss
+++ b/src/components/pages/article/content-body.scss
@@ -4,8 +4,6 @@
 
 .redgoose-body {
   h1, h2, h3, h4, h5, h6 {
-    font-family: var(--font-title);
-    font-weight: normal;
     scroll-margin-top: calc(var(--size-header-height) + 30px);
     .anchor {
       display: none;
@@ -147,9 +145,10 @@
     transform-origin: 50% 50%;
     box-sizing: border-box;
     background: hsl(0 0% 20%);
-    border-radius: 4px;
+    border-radius: 2px;
     line-height: 1.62;
     color-scheme: dark;
+    padding: 1.5rem;
     box-shadow:
       0 4px 36px hsl(0 0% 0% / 25%),
       0 8px 24px hsl(0 0% 0% / 25%);
