--- a/server/search-engine/template/layout/head.pug
+++ b/server/search-engine/template/layout/head.pug
@@ -15,7 +15,7 @@ meta(property="og:image" content=image)
 meta(property="fb:app_id" content="1619661748331088")
 meta(name="p:domain_verify" content="3e05cc5b868de908660cf4004dbdc8fe")
 link(rel="shortcut icon" href="/favicon.ico")
-link(rel="icon" type="image/x-icon" href="/images/redgoose_256x256.png")
-link(rel="manifest" href="/manifest.json")
+link(rel="icon" type="image/x-icon" href="/images/redgoose-1024x1024.webp")
+link(rel="manifest" href="/manifest.webmanifest")
 style
   include ../assets/style.css
