--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -20,7 +20,7 @@
   --font-base: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   --font-eng: 'ortsa', Helvetica, Arial, sans-serif;
   --font-title: 'AritaBuri', sans-serif;
-  --font-code: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+  --font-code: 'Monaco', 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
   @include mixins.dark-mode() {
     color-scheme: dark;
     --color-text-hsl: 0 0% 85%;
