--- a/src/components/pages/article/content-body.scss
+++ b/src/components/pages/article/content-body.scss
@@ -1,8 +1,9 @@
 @use '../../../assets/scss/mixins';
-
 @import '@redgoose/markdown-style/dist/body.scss';
 
 .redgoose-body {
+  --size-margin: 2rem 0;
+  --img-margin: 4rem auto 2rem;
   h1, h2, h3, h4, h5, h6 {
     scroll-margin-top: calc(var(--size-header-height) + 30px);
     .anchor {
@@ -10,14 +11,12 @@
     }
   }
   img {
-    display: block;
     position: relative;
     left: 50%;
     max-width: 100vw;
-    margin: calc(var(--size-margin-vertical) * 2.5) 0 var(--size-margin-vertical);
     transform: translateX(-50%);
     transform-origin: 50% 50%;
-    transition: opacity .2s ease-out;
+    transition: opacity 200ms ease-out;
     cursor: pointer;
     @include mixins.button-setup();
     @include mixins.responsive(desktop) {
@@ -28,104 +27,6 @@
     }
     @media (max-width: 320px) {
       max-width: 100%;
-    }
-  }
-  picture {
-    img {
-      cursor: auto;
-    }
-  }
-  .grid-item {
-    --grid-item-columns: 1;
-    --grid-item-gap: 10px;
-    position: relative;
-    display: grid;
-    grid-template-columns: repeat(var(--grid-item-columns, 1), 1fr);
-    grid-gap: var(--grid-item-gap);
-    margin: calc(var(--size-margin-vertical) * 2.5) auto var(--size-margin-vertical);
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100vw;
-    max-width: 1280px;
-    transform-origin: 50% 50%;
-    > p {
-      position: relative;
-      margin: 0;
-      box-sizing: border-box;
-      padding-top: var(--padding-top, 100%);
-      grid-column: var(--grid-column, auto);
-      > img {
-        position: absolute;
-        margin: 0;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        max-width: none;
-        max-height: none;
-        transform: none;
-        box-sizing: border-box;
-        object-fit: cover;
-      }
-    }
-    @for $i from 1 through 6 {
-      &[data-mobile="#{$i}"] { --grid-item-columns: #{$i}; }
-      > p[col="#{$i}"] {
-        --padding-top: calc(100% / #{$i});
-        --grid-column: span #{$i};
-      }
-    }
-    @include mixins.responsive(tablet) {
-      @for $i from 1 through 6 {
-        &[data-tablet="#{$i}"] { --grid-item-columns: #{$i}; }
-        > p[col-tablet="#{$i}"] {
-          --padding-top: calc(100% / #{$i});
-          --grid-column: span #{$i};
-        }
-      }
-    }
-    @include mixins.responsive(desktop) {
-      width: 90vw;
-      @for $i from 1 through 6 {
-        &[data-desktop="#{$i}"] { --grid-item-columns: #{$i}; }
-        > p[col-desktop="#{$i}"] {
-          --padding-top: calc(100% / #{$i});
-          --grid-column: span #{$i};
-        }
-      }
-    }
-    @include mixins.responsive(max) {
-      @for $i from 1 through 6 {
-        &[data-desktop-large="#{$i}"] { --grid-item-columns: #{$i}; }
-        > p[col-desktop-large="#{$i}"] {
-          --padding-top: calc(100% / #{$i});
-          --grid-column: span #{$i};
-        }
-      }
-    }
-    @media (max-width: 320px) {
-      max-width: 100%;
-      transform: none;
-      left: auto;
-    }
-    &:first-child {
-      margin-top: 0;
-    }
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-  .grid-group {
-    margin: calc(var(--size-margin-vertical) * 2.5) auto var(--size-margin-vertical);
-    > .grid-item {
-      margin-top: var(--grid-item-gap);
-      margin-bottom: var(--grid-item-gap);
-      &:first-child {
-        margin-top: 0;
-      }
-      &:last-child {
-        margin-bottom: 0;
-      }
     }
   }
   code {
@@ -145,7 +46,7 @@
     transform-origin: 50% 50%;
     box-sizing: border-box;
     background: hsl(0 0% 20%);
-    border-radius: 2px;
+    border-radius: 4px;
     line-height: 1.62;
     color-scheme: dark;
     padding: 1.5rem;
@@ -182,6 +83,28 @@
           opacity: 1;
         }
       }
+    }
+  }
+
+  // grid
+  .grid-item {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100vw;
+    max-width: 1280px;
+    transform-origin: 50% 50%;
+    > p {
+      > img {
+        position: static;
+      }
+    }
+    @include mixins.responsive(desktop) {
+      width: 90vw;
+    }
+    @media (max-width: 320px) {
+      transform: none;
+      left: auto;
     }
   }
 }
